Remove down arrow icon from form section headings

--- a/nhs_wagtailadmin/static/nhs_wagtailadmin/css/nhs-overrides.css
+++ b/nhs_wagtailadmin/static/nhs_wagtailadmin/css/nhs-overrides.css
@@ -39,3 +39,9 @@
 #page-edit-form footer .actions.preview {
   width: auto;
 }
+
+#page-edit-form .object h2:before,
+#page-edit-form .object h2 label:before {
+  content: '';
+  height: 100%;
+}
