--- a/nhs_wagtailadmin/static/nhs_wagtailadmin/css/nhs-overrides.css
+++ b/nhs_wagtailadmin/static/nhs_wagtailadmin/css/nhs-overrides.css
@@ -49,23 +49,23 @@
 
 /* Page listings */
 
-#page-reorder-form .listing tbody .title h2 {
+.listing tbody .title h2 {
   font-size: 1.5em;
 }
 
-#page-reorder-form .listing tbody .title h2 a {
+.listing tbody .title h2 a {
   text-decoration: underline;
   color: #43b1b0;
 }
 
-#page-reorder-form .listing tbody .title h2 a:hover {
+.listing tbody .title h2 a:hover {
   text-decoration: none;
 }
 
-#page-reorder-form .listing .actions {
+.listing .actions {
   visibility: visible;
 }
 
-#page-reorder-form .listing .status-tag {
+.listing .status-tag {
   margin: 0;
 }
