--- a/nhs_wagtailadmin/templates/wagtailadmin/home/pages_for_moderation.html
+++ b/nhs_wagtailadmin/templates/wagtailadmin/home/pages_for_moderation.html
@@ -10,8 +10,7 @@
                 <col width="15%"/>
                 <thead>
                     <tr>
-                        <th class="title">{% trans "Title" %}</th>
-                        <th>{% trans "Parent" %}</th>
+                        <th class="title" colspan="2">{% trans "Title" %}</th>
                         <th>{% trans "Type" %}</th>
                         <th>{% trans "Edited" %}</th>
                     </tr>
@@ -19,9 +18,9 @@
                 <tbody>
                     {% for revision in page_revisions_for_moderation %}
                         <tr>
-                            <td class="title" valign="top">
+                            <td class="title" valign="top" colspan="2">
                                 <h2>
-                                    <a href="{% url 'wagtailadmin_pages:edit' revision.page.id %}" title="{% trans 'Edit this page' %}">{{ revision.page.title }}</a>
+                                    {{ revision.page.title }}
 
                                     {% include "wagtailadmin/pages/listing/_privacy_indicator.html" with page=revision.page %}
                                     {% include "wagtailadmin/pages/listing/_locked_indicator.html" with page=revision.page %}
@@ -42,9 +41,6 @@
                                     <li><a href="{% url 'wagtailadmin_pages:edit' revision.page.id %}" class="button button-small button-secondary">{% trans 'Edit' %}</a></li>
                                     <li><a href="{% url 'wagtailadmin_pages:preview_for_moderation' revision.id %}" class="button button-small button-secondary" target="_blank">{% trans 'Preview' %}</a></li>
                                 </ul>
-                            </td>
-                            <td valign="top">
-                                <a href="{% url 'wagtailadmin_explore' revision.page.get_parent.id %}">{{ revision.page.get_parent.title }}</a>
                             </td>
                             <td class="type" valign="top">
                                 {{ revision.page.content_type.model_class.get_verbose_name }}
