--- a/nhs_wagtailadmin/templates/wagtailadmin/pages/listing/_parent_page_title_explore.html
+++ b/nhs_wagtailadmin/templates/wagtailadmin/pages/listing/_parent_page_title_explore.html
@@ -4,12 +4,12 @@
 {# The title field for a parent page when the listing is in 'explore' mode #}
 
 <h2{% if parent_page.is_navigable %} class="folder"{% endif %}>
-  {{ parent_page.title }}
-  {% include "wagtailadmin/pages/listing/_locked_indicator.html" with page=parent_page %}
+    {{ parent_page.get_admin_display_title }}
+    {% include "wagtailadmin/pages/listing/_locked_indicator.html" with page=parent_page %}
 </h2>
 
 {% include "wagtailadmin/pages/_privacy_switch.html" with page=parent_page %}
 
 <ul class="actions">
-  {% page_listing_buttons parent_page parent_page_perms is_parent=True %}
+    {% page_listing_buttons parent_page parent_page_perms is_parent=True %}
 </ul>
