Implement the split panel component
This adds a FixedListBlock similar to the ListBlock but with a
fixed number of elements that cannot be changed.

--- a/nhs_wagtailadmin/static/nhs_wagtailadmin/css/nhs-overrides.css
+++ b/nhs_wagtailadmin/static/nhs_wagtailadmin/css/nhs-overrides.css
@@ -69,3 +69,15 @@
 .listing .status-tag {
   margin: 0;
 }
+
+
+/* Fixed List Block */
+li.sequence-member .sequence-type-fixed-list li.required > label:after {
+  content: '*';
+  color: #cd3238;
+  font-weight: bold;
+  display: inline-block;
+  margin-left: 0.5em;
+  line-height: 1em;
+  font-size: 13px;
+}
