Restore the figureList component
This restores the figureList component and updates blocks/serializers
after removing the images endpoint.

--- a/nhs_wagtailadmin/static/nhs_wagtailadmin/css/nhs-overrides.css
+++ b/nhs_wagtailadmin/static/nhs_wagtailadmin/css/nhs-overrides.css
@@ -81,3 +81,10 @@ li.sequence-member .sequence-type-fixed-list li.required > label:after {
   line-height: 1em;
   font-size: 13px;
 }
+
+/* Fixes one-line labels when adding components */
+.stream-menu .stream-menu-inner button span {
+  white-space: nowrap;
+  overflow: visible;
+  padding: 0;
+}
