--- a/nhs_wagtailadmin/static/nhs_wagtailadmin/css/nhs-overrides.css
+++ b/nhs_wagtailadmin/static/nhs_wagtailadmin/css/nhs-overrides.css
@@ -88,3 +88,9 @@ li.sequence-member .sequence-type-fixed-list li.required > label:after {
   overflow: visible;
   padding: 0;
 }
+
+/* Makes links in the markdown editor darker */
+.CodeMirror.CodeMirror-wrap .CodeMirror-code .cm-link,
+.CodeMirror.CodeMirror-wrap .CodeMirror-code .cm-url {
+  color: #555;
+}
